# SCAR

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  robotwin_baseline.yaml
configs/analysis/: place_a2b_left__embodiment_image_classifier.yaml
configs/presets/lvp/: config_wan_v2a2v.yaml
configs/robotwin_adaptation/place_a2b_left/: place_a2b_left__shared_gt__target_aloha_agilex__m100__target_val.yaml  place_a2b_left__shared_gt__target_aloha_agilex__m10__target_val.yaml  place_a2b_left__shared_gt__target_aloha_agilex__m50__target_val.yaml  place_a2b_left__shared_gt__target_arx_x5__m100__target_val.yaml  place_a2b_left__shared_gt__target_arx_x5__m10__target_val.yaml  place_a2b_left__shared_gt__target_arx_x5__m50__target_val.yaml  (+45 more)
scar/: __init__.py  config.py  controller_fdm.py  controller_fdm_eval.py  cross_cycle_objectives.py  cycle_api.py  dataloader.py  engines.py  environment.py  eval_loop.py  evaluation.py  fixed_subset.py  gt_action_probe.py  idm_backbone.py  idm_vq.py  latent_action_controller.py  metrics.py  models.py  objectives.py  regularization.py  runtime.py
scripts/: _launch_utils.sh  eval_action_controller.py  eval_action_transfer_leakage.py  eval_scar.py  eval_scar_repeated.py  export_split_videos.py  finetune_action_controller_fdm.py  infer_action_controller.py  infer_action_transfer.py  launch_controller_eval.sh  launch_controller_fdm_finetune.sh  launch_eval.sh  launch_eval_repeated.sh  launch_train.sh  train_action_controller.py  train_action_probe.py  train_embodiment_classifier.py  train_scar.py
